# Computed_Tomography

Notebooks/: Prototype.ipynb  RandomGeometry.ipynb  Simple Geometries and Error.ipynb  Tuning.ipynb
Notebooks/.ipynb_checkpoints/: Prototype-checkpoint.ipynb
codigo/: CMakeLists.txt  readme.txt
codigo/src/: imageHandling.h  leastsquares.h  linalg.h  main.cpp  rays.h
codigo/tests/: test_linalg.cpp
